; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/irq/extr_irq_service.c_dal_irq_service_construct.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/irq/extr_irq_service.c_dal_irq_service_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_service = type { i64 }
%struct.irq_service_init_data = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dal_irq_service_construct(%struct.irq_service* %0, %struct.irq_service_init_data* %1) #0 {
  %3 = alloca %struct.irq_service*, align 8
  %4 = alloca %struct.irq_service_init_data*, align 8
  store %struct.irq_service* %0, %struct.irq_service** %3, align 8
  store %struct.irq_service_init_data* %1, %struct.irq_service_init_data** %4, align 8
  %5 = load %struct.irq_service_init_data*, %struct.irq_service_init_data** %4, align 8
  %6 = icmp ne %struct.irq_service_init_data* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.irq_service_init_data*, %struct.irq_service_init_data** %4, align 8
  %9 = getelementptr inbounds %struct.irq_service_init_data, %struct.irq_service_init_data* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %7, %2
  %13 = call i32 (...) @BREAK_TO_DEBUGGER()
  br label %20

14:                                               ; preds = %7
  %15 = load %struct.irq_service_init_data*, %struct.irq_service_init_data** %4, align 8
  %16 = getelementptr inbounds %struct.irq_service_init_data, %struct.irq_service_init_data* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.irq_service*, %struct.irq_service** %3, align 8
  %19 = getelementptr inbounds %struct.irq_service, %struct.irq_service* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  br label %20

20:                                               ; preds = %14, %12
  ret void
}

declare dso_local i32 @BREAK_TO_DEBUGGER(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
